// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextComponent should render correctly in "debug" mode 1`] = `
<TextFields
  classes={
    Object {
      "container": "TextFields-container-1",
      "dense": "TextFields-dense-3",
      "menu": "TextFields-menu-4",
      "pos": "TextFields-pos-5",
      "textField": "TextFields-textField-2",
    }
  }
  debug={true}
/>
`;

exports[`TextComponent should render correctly with no props 1`] = `
<TextFields
  classes={
    Object {
      "container": "TextFields-container-1",
      "dense": "TextFields-dense-3",
      "menu": "TextFields-menu-4",
      "pos": "TextFields-pos-5",
      "textField": "TextFields-textField-2",
    }
  }
/>
`;

exports[`TextComponent should render correctly with text 1`] = `
<TextFields
  classes={
    Object {
      "container": "TextFields-container-1",
      "dense": "TextFields-dense-3",
      "menu": "TextFields-menu-4",
      "pos": "TextFields-pos-5",
      "textField": "TextFields-textField-2",
    }
  }
  resolution="Lore ipsum"
/>
`;

exports[`TextComponent should render correctly with title 1`] = `
<TextFields
  answer="Tytul"
  classes={
    Object {
      "container": "TextFields-container-1",
      "dense": "TextFields-dense-3",
      "menu": "TextFields-menu-4",
      "pos": "TextFields-pos-5",
      "textField": "TextFields-textField-2",
    }
  }
/>
`;

exports[`TextComponent should render correctly with title and text 1`] = `
<TextFields
  answer="Tytul"
  classes={
    Object {
      "container": "TextFields-container-1",
      "dense": "TextFields-dense-3",
      "menu": "TextFields-menu-4",
      "pos": "TextFields-pos-5",
      "textField": "TextFields-textField-2",
    }
  }
  resolution="Lore ipsum"
/>
`;
